--- a/index.html
+++ b/index.html
@@ -4,205 +4,139 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Wire Cut Tracker</title>
+  <link rel="manifest" href="manifest.json" />
   <style>
     body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: Arial, sans-serif;
       background-color: #1c1c1c;
-      color: #eee;
+      color: #f0f0f0;
+      margin: 0;
       padding: 1rem;
     }
-    .day-section {
-      background: rgba(43, 43, 43, 0.95);
-      border: 1px solid #444;
-      border-radius: 10px;
-      padding: 1rem;
-      margin-bottom: 1.5rem;
-    }
-    h1, h2, h3 {
+    h1, h2 {
+      text-align: center;
       color: #ccc;
-      margin-top: 0;
+    }
+    .day-container {
+      background-color: #2a2a2a;
+      border: 1px solid #444;
+      border-radius: 8px;
+      margin: 1rem 0;
+      padding: 1rem;
+    }
+    .shift-container {
+      background-color: #333;
+      border-radius: 6px;
+      margin: 1rem 0;
+      padding: 1rem;
     }
     label {
       display: block;
-      margin-top: 0.5rem;
-      color: #aaa;
+      margin: 0.3rem 0 0.1rem;
     }
     input, select, textarea {
       width: 100%;
       padding: 0.5rem;
+      border-radius: 4px;
+      border: 1px solid #555;
       margin-bottom: 0.5rem;
-      border-radius: 5px;
-      border: 1px solid #666;
-      background: #1a1a1a;
+      background-color: #1a1a1a;
       color: #fff;
     }
     button {
-      width: 100%;
-      padding: 0.75rem;
-      background: #444;
-      color: #fff;
+      background-color: #555;
+      color: white;
       border: none;
-      border-radius: 5px;
-      font-weight: bold;
-      margin-top: 1rem;
-      transition: 0.2s;
-    }
-    button:hover {
-      background: #666;
-    }
-    .footer {
-      text-align: center;
-      margin-top: 2rem;
-      font-size: 0.8rem;
-      color: #777;
-    }
-    .worksheet-entry {
-      background-color: #2a2a2a;
-      border: 1px solid #555;
-      border-radius: 8px;
-      padding: 0.5rem;
-      margin-bottom: 1rem;
+      padding: 0.5rem 1rem;
+      margin-top: 0.5rem;
+      border-radius: 4px;
       cursor: pointer;
     }
-    .worksheet-entry pre {
-      white-space: pre-wrap;
-      color: #ccc;
+    button:hover {
+      background-color: #777;
     }
   </style>
-  <script type="module">
-    import { initializeApp } from 'https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js';
-    import { getFirestore, collection, addDoc, getDocs } from 'https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js';
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyArL-sDIt0bQuHIDZIDpODjtV8bziQnEDo",
-      authDomain: "wire-cut-app.firebaseapp.com",
-      projectId: "wire-cut-app",
-      storageBucket: "wire-cut-app.appspot.com",
-      messagingSenderId: "683731491281",
-      appId: "1:683731491281:web:38587d1f4de9c4640ce8f0"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-
-    window.saveWorkSheet = async function () {
-      const days = ['monday', 'tuesday', 'wednesday', 'thursday', 'friday'];
-      const weekData = {
-        coNumber: document.getElementById('coNumber').value,
-        createdAt: new Date().toISOString(),
-        days: {}
-      };
-      for (let day of days) {
-        weekData.days[day] = {
-          date: document.querySelector(`[name="${day}Date"]`).value,
-          operator: document.querySelector(`[name="${day}Operator"]`).value,
-          wireType: document.querySelector(`[name="${day}WireType"]`).value,
-          wireSize: document.querySelector(`[name="${day}WireSize"]`).value,
-          wireDiameter: document.querySelector(`[name="${day}WireDiameter"]`).value,
-          required: document.querySelector(`[name="${day}Required"]`).value,
-          cut: document.querySelector(`[name="${day}Cut"]`).value,
-          machine: document.querySelector(`[name="${day}Machine"]`).value,
-          notes: document.querySelector(`[name="${day}Notes"]`).value
-        };
-      }
-      try {
-        await addDoc(collection(db, 'weeklyWorksheets'), weekData);
-        alert('✅ Work sheet saved successfully');
-      } catch (e) {
-        console.error('❌ Error saving work sheet:', e);
-        alert('❌ Error saving work sheet');
-      }
-    };
-
-    window.viewHistory = async function () {
-      const historyContainer = document.getElementById('historyContainer');
-      historyContainer.innerHTML = '';
-      const querySnapshot = await getDocs(collection(db, 'weeklyWorksheets'));
-      querySnapshot.forEach((docSnap) => {
-        const data = docSnap.data();
-        const entry = document.createElement('div');
-        entry.classList.add('worksheet-entry');
-        let content = `<strong>CO#:</strong> ${data.coNumber}<br><strong>Date:</strong> ${new Date(data.createdAt).toLocaleDateString()}<br>`;
-        for (const [day, values] of Object.entries(data.days)) {
-          content += `\n<strong>${capitalize(day)}:</strong>\n`;
-          content += `- Date: ${values.date || ''}\n`;
-          content += `- Operator: ${values.operator || ''}\n`;
-          content += `- Wire Type: ${values.wireType || ''}\n`;
-          content += `- Size: ${values.wireSize || ''} in\n`;
-          content += `- Diameter: ${values.wireDiameter || ''} in\n`;
-          content += `- Required: ${values.required || ''}\n`;
-          content += `- Cut: ${values.cut || ''}\n`;
-          content += `- Machine: ${values.machine || ''}\n`;
-          content += `- Notes: ${values.notes || ''}\n`;
-        }
-        entry.innerHTML = content.replace(/\n/g, '<br>');
-        entry.addEventListener('click', () => loadWorksheet(data));
-        historyContainer.appendChild(entry);
-      });
-    };
-
-    function loadWorksheet(data) {
-      document.getElementById('coNumber').value = data.coNumber || '';
-      for (const [day, values] of Object.entries(data.days)) {
-        for (const key in values) {
-          const el = document.querySelector(`[name="${day}${capitalize(key)}"]`);
-          if (el) el.value = values[key];
-        }
-      }
-    }
-
-    function capitalize(str) {
-      return str.charAt(0).toUpperCase() + str.slice(1);
-    }
-  </script>
 </head>
 <body>
   <h1>Wire Cut Tracker</h1>
-  <label for="coNumber">CO-NUMBER</label>
-  <input type="text" id="coNumber" placeholder="e.g. CO-1023" />
+  <div id="app"></div>
+  <script>
+    const days = ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"];
+    const shifts = ["Shift 1", "Shift 2"];
 
-  <div id="week">
-    <script>
-      const days = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday'];
-      for (let day of days) {
-        document.write(`
-          <div class="day-section">
-            <h2>${day}</h2>
-            <label>Date</label>
-            <input type="date" name="${day.toLowerCase()}Date" />
-            <label>Operator Name</label>
-            <input type="text" name="${day.toLowerCase()}Operator" placeholder="Full name" />
-            <label>Wire Type</label>
-            <select name="${day.toLowerCase()}WireType">
-              <option value="Cross Wire">Cross Wire</option>
-              <option value="Long Wire">Long Wire</option>
-            </select>
-            <label>Wire Size (in)</label>
-            <input type="text" name="${day.toLowerCase()}WireSize" placeholder="e.g. 2.5" />
-            <label>Wire Diameter (in)</label>
-            <input type="text" name="${day.toLowerCase()}WireDiameter" placeholder="e.g. 0.25" />
-            <label>Required Quantity</label>
-            <input type="number" name="${day.toLowerCase()}Required" />
-            <label>Cut Quantity</label>
-            <input type="number" name="${day.toLowerCase()}Cut" />
-            <label>Machine</label>
-            <select name="${day.toLowerCase()}Machine">
-              <option value="1">Machine 1</option>
-              <option value="2">Machine 2</option>
-              <option value="3">Machine 3</option>
-            </select>
-            <label>Notes</label>
-            <textarea name="${day.toLowerCase()}Notes" rows="2" placeholder="Observations..."></textarea>
-          </div>
-        `);
-      }
-    </script>
-  </div>
+    const app = document.getElementById('app');
 
-  <button onclick="saveWorkSheet()">Save Work Sheet</button>
-  <button onclick="viewHistory()">View History</button>
-  <div id="historyContainer"></div>
-  <div class="footer">© 2025 WireTrack Systems</div>
+    days.forEach(day => {
+      const dayContainer = document.createElement('div');
+      dayContainer.className = 'day-container';
+
+      const dayHeader = document.createElement('h2');
+      dayHeader.textContent = day;
+      dayContainer.appendChild(dayHeader);
+
+      shifts.forEach(shift => {
+        const shiftContainer = document.createElement('div');
+        shiftContainer.className = 'shift-container';
+
+        const shiftTitle = document.createElement('h3');
+        shiftTitle.textContent = shift;
+        shiftContainer.appendChild(shiftTitle);
+
+        const fields = [
+          { id: 'operator', label: 'Operator Name', type: 'text' },
+          { id: 'wireType', label: 'Wire Type', type: 'select', options: ['Cross Wire', 'Long Wire'] },
+          { id: 'wireSize', label: 'Wire Size', type: 'text' },
+          { id: 'wireDiameter', label: 'Wire Diameter', type: 'text' },
+          { id: 'requiredQty', label: 'Required Quantity', type: 'number' },
+          { id: 'cutQty', label: 'Cut Quantity', type: 'number' },
+          { id: 'machineNum', label: 'Machine Number', type: 'number' },
+          { id: 'notes', label: 'Notes', type: 'textarea' }
+        ];
+
+        fields.forEach(field => {
+          const label = document.createElement('label');
+          label.textContent = field.label;
+          shiftContainer.appendChild(label);
+
+          let input;
+          if (field.type === 'select') {
+            input = document.createElement('select');
+            field.options.forEach(opt => {
+              const option = document.createElement('option');
+              option.value = opt;
+              option.textContent = opt;
+              input.appendChild(option);
+            });
+          } else if (field.type === 'textarea') {
+            input = document.createElement('textarea');
+            input.rows = 3;
+          } else {
+            input = document.createElement('input');
+            input.type = field.type;
+          }
+          input.id = `${day}-${shift}-${field.id}`;
+          shiftContainer.appendChild(input);
+        });
+
+        const saveBtn = document.createElement('button');
+        saveBtn.textContent = 'Save Work Sheet';
+        saveBtn.onclick = () => {
+          alert(`Saving ${day} - ${shift} worksheet...`);
+        };
+        shiftContainer.appendChild(saveBtn);
+
+        const viewBtn = document.createElement('button');
+        viewBtn.textContent = 'View History';
+        viewBtn.onclick = () => {
+          alert(`Viewing ${day} - ${shift} history...`);
+        };
+        shiftContainer.appendChild(viewBtn);
+
+        dayContainer.appendChild(shiftContainer);
+      });
+
+      app.appendChild(dayContainer);
+    });
+  </script>
 </body>
 </html>
