--- a/index.html
+++ b/index.html
@@ -48,12 +48,17 @@
       color: white;
       border: none;
       padding: 0.5rem 1rem;
-      margin-top: 0.5rem;
+      margin: 0.3rem 0.5rem 0 0;
       border-radius: 4px;
       cursor: pointer;
     }
     button:hover {
       background-color: #777;
+    }
+    .button-group {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5rem;
     }
   </style>
 </head>
@@ -118,20 +123,31 @@
           shiftContainer.appendChild(input);
         });
 
+        const buttonGroup = document.createElement('div');
+        buttonGroup.className = 'button-group';
+
         const saveBtn = document.createElement('button');
         saveBtn.textContent = 'Save Work Sheet';
         saveBtn.onclick = () => {
           alert(`Saving ${day} - ${shift} worksheet...`);
         };
-        shiftContainer.appendChild(saveBtn);
+        buttonGroup.appendChild(saveBtn);
 
         const viewBtn = document.createElement('button');
         viewBtn.textContent = 'View History';
         viewBtn.onclick = () => {
           alert(`Viewing ${day} - ${shift} history...`);
         };
-        shiftContainer.appendChild(viewBtn);
+        buttonGroup.appendChild(viewBtn);
 
+        const deleteBtn = document.createElement('button');
+        deleteBtn.textContent = 'Delete Work Sheet';
+        deleteBtn.onclick = () => {
+          alert(`Deleting ${day} - ${shift} worksheet...`);
+        };
+        buttonGroup.appendChild(deleteBtn);
+
+        shiftContainer.appendChild(buttonGroup);
         dayContainer.appendChild(shiftContainer);
       });
 
