--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Wire Cut Tracker</title>
   <link rel="manifest" href="manifest.json" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -65,27 +66,11 @@
 <body>
   <h1>Wire Cut Tracker</h1>
   <div id="app"></div>
-
-  <!-- Firebase Config & Functions -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
-    import { getFirestore, doc, setDoc, getDoc, deleteDoc } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyArL-sDIt0bQuHIDZIDpODjtV8bziQnEDo",
-      authDomain: "wire-cut-app.firebaseapp.com",
-      projectId: "wire-cut-app",
-      storageBucket: "wire-cut-app.appspot.com",
-      messagingSenderId: "683731491281",
-      appId: "1:683731491281:web:38587d1f4de9c4640ce8f0"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-
+  <script>
     const days = ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"];
     const shifts = ["Shift 1", "Shift 2"];
-    const appDiv = document.getElementById('app');
+
+    const app = document.getElementById('app');
 
     days.forEach(day => {
       const dayContainer = document.createElement('div');
@@ -114,6 +99,8 @@
           { id: 'notes', label: 'Notes', type: 'textarea' }
         ];
 
+        const inputs = {};
+
         fields.forEach(field => {
           const label = document.createElement('label');
           label.textContent = field.label;
@@ -136,6 +123,7 @@
             input.type = field.type;
           }
           input.id = `${day}-${shift}-${field.id}`;
+          inputs[field.id] = input;
           shiftContainer.appendChild(input);
         });
 
@@ -144,73 +132,48 @@
 
         const saveBtn = document.createElement('button');
         saveBtn.textContent = 'Save Work Sheet';
-        saveBtn.onclick = () => handleSave(day, shift);
+        saveBtn.onclick = () => {
+          alert(`Saving ${day} - ${shift} worksheet...`);
+        };
         buttonGroup.appendChild(saveBtn);
 
         const viewBtn = document.createElement('button');
         viewBtn.textContent = 'View History';
-        viewBtn.onclick = () => handleView(day, shift);
+        viewBtn.onclick = () => {
+          alert(`Viewing ${day} - ${shift} history...`);
+        };
         buttonGroup.appendChild(viewBtn);
 
         const deleteBtn = document.createElement('button');
         deleteBtn.textContent = 'Delete Work Sheet';
-        deleteBtn.onclick = () => handleDelete(day, shift);
+        deleteBtn.onclick = () => {
+          alert(`Deleting ${day} - ${shift} worksheet...`);
+        };
         buttonGroup.appendChild(deleteBtn);
+
+        const pdfBtn = document.createElement('button');
+        pdfBtn.textContent = 'Generate PDF';
+        pdfBtn.onclick = () => {
+          const { jsPDF } = window.jspdf;
+          const doc = new jsPDF();
+          doc.setFontSize(12);
+          doc.text(`Work Sheet - ${day} - ${shift}`, 10, 10);
+          let y = 20;
+          for (const key in inputs) {
+            const val = inputs[key].value || '';
+            doc.text(`${key.replace(/([A-Z])/g, ' $1')}: ${val}`, 10, y);
+            y += 8;
+          }
+          doc.save(`${day}_${shift}_worksheet.pdf`);
+        };
+        buttonGroup.appendChild(pdfBtn);
 
         shiftContainer.appendChild(buttonGroup);
         dayContainer.appendChild(shiftContainer);
       });
 
-      appDiv.appendChild(dayContainer);
+      app.appendChild(dayContainer);
     });
-
-    async function handleSave(day, shift) {
-      const data = {};
-      const ids = ['operator', 'wireType', 'wireSize', 'wireDiameter', 'requiredQty', 'cutQty', 'machineNum', 'notes'];
-      ids.forEach(id => {
-        data[id] = document.getElementById(`${day}-${shift}-${id}`).value;
-      });
-
-      try {
-        await setDoc(doc(db, "worksheets", `${day}-${shift}`), data);
-        alert("✅ Work sheet saved!");
-      } catch (e) {
-        alert("❌ Error saving: " + e);
-      }
-    }
-
-    async function handleView(day, shift) {
-      try {
-        const ref = doc(db, "worksheets", `${day}-${shift}`);
-        const snapshot = await getDoc(ref);
-        if (snapshot.exists()) {
-          const data = snapshot.data();
-          for (const key in data) {
-            const el = document.getElementById(`${day}-${shift}-${key}`);
-            if (el) el.value = data[key];
-          }
-          alert("📂 Work sheet loaded!");
-        } else {
-          alert("⚠️ No data found.");
-        }
-      } catch (e) {
-        alert("❌ Error loading: " + e);
-      }
-    }
-
-    async function handleDelete(day, shift) {
-      try {
-        await deleteDoc(doc(db, "worksheets", `${day}-${shift}`));
-        const ids = ['operator', 'wireType', 'wireSize', 'wireDiameter', 'requiredQty', 'cutQty', 'machineNum', 'notes'];
-        ids.forEach(id => {
-          const el = document.getElementById(`${day}-${shift}-${id}`);
-          if (el) el.value = '';
-        });
-        alert("🗑️ Work sheet deleted!");
-      } catch (e) {
-        alert("❌ Error deleting: " + e);
-      }
-    }
   </script>
 </body>
 </html>
